--- a/dynamic/gallaxy.html
+++ b/dynamic/gallaxy.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>gallaxy</title>
     <meta name="description" content="360&deg; Image - A-Frame">
-    <script src="../dist/aframe-master.js"></script>
+    <script src="../dist/aframe-master.min.js"></script>
   <body>
     <a-scene>
 
