--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>a static goods</title>
     <meta name="description" content="360&deg; Image - A-Frame">
-    <!--<script src="../dist/aframe-master.js"></script>-->
+    <!--<script src="../dist/aframe-master.min.js"></script>-->
     <script src="../dist/aframe-v0.5.0.min.js"></script>
   </head>
   <body>
